--- a/src/app.html
+++ b/src/app.html
@@ -24,9 +24,9 @@
     margin: 0;
     scroll-behavior: smooth;
     font-family: "Open sans", sans-serif;
-  font-variation-settings: "wght" 900, "ital" 1;
-  font-family: Oddval Variable;
-}
+    font-variation-settings: "wght" 900, "ital" 1;
+    /* font-family: Oddval Variable; */
+  }
 
   :root {
     --spat: #7faec5;
