--- a/src/app.html
+++ b/src/app.html
@@ -38,4 +38,28 @@
   body {
     background-color: #292e45;
   }
+
+  main {
+    padding: 6rem 3.5rem;
+  }
+  a {
+    text-decoration: none;
+  }
+
+  h1 {
+    font-family: "Montserrat";
+    font-size: clamp(1rem, 2vw, 3rem);
+    font-weight: 500;
+    color: white;
+    margin-bottom: 1rem;
+  }
+
+  p,
+  li {
+    font-family: "Montserrat";
+    font-size: clamp(0.7rem, 2vw, 3rem);
+    font-weight: 100;
+    color: white;
+    margin-bottom: 0.5rem;
+  }
 </style>
